crates/df-catalog/src/tests/snapshots/information_schema_columns.snap
---
source: crates/df-catalog/src/tests/information_schema.rs
description: SELECT * FROM embucket.information_schema.columns
snapshot_kind: text
---
+---------------+--------------+------------+-------------+------------------+----------------+-------------+-----------+--------------------------+------------------------+-------------------+-------------------------+---------------+--------------------+---------------+
| table_catalog | table_schema | table_name | column_name | ordinal_position | column_default | is_nullable | data_type | character_maximum_length | character_octet_length | numeric_precision | numeric_precision_radix | numeric_scale | datetime_precision | interval_type |
+---------------+--------------+------------+-------------+------------------+----------------+-------------+-----------+--------------------------+------------------------+-------------------+-------------------------+---------------+--------------------+---------------+
| embucket      | public       | test       | id          | 0                |                | YES         | Int32     |                          |                        | 32                | 2                       |               |                    |               |
+---------------+--------------+------------+-------------+------------------+----------------+-------------+-----------+--------------------------+------------------------+-------------------+-------------------------+---------------+--------------------+---------------+
