crates/df-catalog/src/tests/snapshots/information_schema_databases.snap
---
source: crates/df-catalog/src/tests/information_schema.rs
description: SELECT * FROM embucket.information_schema.databases
---
+---------------+----------------+---------------+------------+------------+
| database_name | database_owner | database_type | created_at | updated_at |
+---------------+----------------+---------------+------------+------------+
| embucket      |                | embucket      |            |            |
+---------------+----------------+---------------+------------+------------+
