crates/df-catalog/src/tests/snapshots/information_schema_navigation_tree.snap
---
source: crates/df-catalog/src/tests/information_schema.rs
description: "SELECT * FROM embucket.information_schema.navigation_tree ORDER BY database, schema, table"
snapshot_kind: text
---
+----------+--------------------+-----------------+
| database | schema             | table           |
+----------+--------------------+-----------------+
| embucket | information_schema | columns         |
| embucket | information_schema | databases       |
| embucket | information_schema | df_settings     |
| embucket | information_schema | navigation_tree |
| embucket | information_schema | navigation_tree |
| embucket | information_schema | parameters      |
| embucket | information_schema | routines        |
| embucket | information_schema | schemata        |
| embucket | information_schema | tables          |
| embucket | information_schema | views           |
| embucket | information_schema |                 |
| embucket | public             | first           |
| embucket | public             | second          |
| embucket | public             |                 |
| embucket |                    |                 |
+----------+--------------------+-----------------+
