crates/df-catalog/src/tests/snapshots/information_schema_tables.snap
---
source: crates/df-catalog/src/tests/information_schema.rs
description: "SELECT * FROM embucket.information_schema.tables "
snapshot_kind: text
---
+---------------+--------------+------------+------------+
| table_catalog | table_schema | table_name | table_type |
+---------------+--------------+------------+------------+
| embucket      | public       | second     | TABLE      |
| embucket      | public       | first      | TABLE      |
+---------------+--------------+------------+------------+
