crates/df-catalog/src/tests/snapshots/information_schema_views.snap
---
source: crates/df-catalog/src/tests/information_schema.rs
description: SELECT * FROM embucket.information_schema.views
snapshot_kind: text
---
+--------------+--------------------+-----------------+-----------+------------+
| view_catalog | view_schema        | view_name       | view_type | definition |
+--------------+--------------------+-----------------+-----------+------------+
| embucket     | information_schema | schemata        | VIEW      |            |
| embucket     | information_schema | tables          | VIEW      |            |
| embucket     | information_schema | columns         | VIEW      |            |
| embucket     | information_schema | parameters      | VIEW      |            |
| embucket     | information_schema | navigation_tree | VIEW      |            |
| embucket     | information_schema | df_settings     | VIEW      |            |
| embucket     | information_schema | views           | VIEW      |            |
| embucket     | information_schema | databases       | VIEW      |            |
| embucket     | information_schema | routines        | VIEW      |            |
+--------------+--------------------+-----------------+-----------+------------+
